another fix for the scroll bar - visible in workout card; invisible in exercise list

--- a/src/app/components/workout-day/workout-day.component.scss
+++ b/src/app/components/workout-day/workout-day.component.scss
@@ -1,7 +1,7 @@
     ion-list {
-        height: 80vh;
+        height: 69vh;
         width: 92vw;
-        margin-left: 15px;
+        //margin-left: 15px;
         overflow-y: scroll;
         overflow-x: hidden;
         margin-bottom: 0px;
