--- a/src/global.scss
+++ b/src/global.scss
@@ -10,9 +10,16 @@
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
 
-ionlab-preview {
-    // trying to fix bug in chrom only - does not help
-    --frame-width: var(--frame-default-width)!important;
+// ionlab-preview {
+//     // trying to fix bug in chrom only - does not help!
+//     //--frame-width: var(--frame-default-width)!important;
+// }
+
+// .scroll-y, .inner-scroll { display: none; }
+
+::-webkit-scrollbar,
+*::-webkit-scrollbar {
+    display: none;
 }
 
 // ion-app.ios [padding-vertical]{
@@ -59,10 +66,18 @@ ionlab-preview {
 //     overflow-y: scroll;
 //     overflow-x: hidden;
 // }
-::-webkit-scrollbar {
-    width: 0px;
-    background: transparent;
+
+// :root::-webkit-scrollbar {
+//     width: 0px;
+//     background: transparent;
+// }
+:root {
+
 }
+// ::-webkit-scrollbar {
+//     width: 0px;
+//     background: transparent;
+// }
 .select-popover ion-list {
     .item {
         // background: color($colors, danger);
